--- a/index.html
+++ b/index.html
@@ -26,36 +26,28 @@
       const v = (e) => /[^\s@]+@[^\s@]+\.[^\s@]+/.test(e);
       const submit = (e) => { e.preventDefault(); if (!v(email)) return setMsg("Enter a valid email."); setMsg("Thanks! (preview)"); setEmail(""); };
       const Feature = ({ title, desc }) => (<div className="rounded-2xl p-5 bg-white/70 shadow-sm border border-black/5"><h3 className="font-semibold text-lg mb-2">{title}</h3><p className="text-sm text-black/70">{desc}</p></div>);
-      const Card = ({ badge, title, bullets, cta, href, download }) => (
-        <div className="rounded-2xl p-6 bg-white shadow-sm border border-black/10 flex flex-col justify-between">
-          <div>
-            <div className="text-xs uppercase tracking-widest mb-2 opacity-70">{badge}</div>
-            <h4 className="font-semibold text-xl mb-3">{title}</h4>
-            <ul className="space-y-2 list-disc pl-5 text-black/80">{bullets.map((b, i) => (<li key={i} className="text-sm">{b}</li>))}</ul>
-          </div>
-          {cta && (
-            <button onClick={() => window.openDownloadModal && window.openDownloadModal(href, download)} className="mt-6 inline-flex justify-center rounded-xl px-4 py-2 border border-black/10 shadow">
-              {cta}
-            </button>
-          )}
-        </div>
-      );
+      const Card = ({ badge, title, bullets, cta, href, download }) => (<div className="rounded-2xl p-6 bg-white shadow-sm border border-black/10 flex flex-col justify-between"><div><div className="text-xs uppercase tracking-widest mb-2 opacity-70">{badge}</div><h4 className="font-semibold text-xl mb-3">{title}</h4><ul className="space-y-2 list-disc pl-5 text-black/80">{bullets.map((b, i) => (<li key={i} className="text-sm">{b}</li>))}</ul></div>{cta && (<a href={href} download={download || undefined} className="mt-6 inline-flex justify-center rounded-xl px-4 py-2 border border-black/10 shadow">{cta}</a>)}</div>);
 
-      window.openDownloadModal = (fileUrl, fileName) => {
-        const modal = document.getElementById('dl-modal');
-        const form = document.getElementById('dl-form');
-        form.dataset.file = fileUrl;
-        form.dataset.name = fileName || '';
-        modal.classList.remove('hidden');
-      };
-
-      const sendPdf = async (email, filename) => {
-        const res = await fetch('/api/send-pdf', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email, filename })
-        });
-        return res.json();
+      const OWNER_EMAIL = "you@example.com"; // TODO: replace with your address to BCC
+      const emailFormToSelf = (form, subject) => {
+        try {
+          const labels = form.querySelectorAll('label');
+          let body = '';
+          labels.forEach((label) => {
+            const control = label.nextElementSibling;
+            if (!control) return;
+            const tag = control.tagName?.toLowerCase();
+            if (tag === 'textarea' || tag === 'input') {
+              const labelText = label.textContent.trim();
+              const value = control.value || '';
+              body += `${labelText}\n${value}\n\n`;
+            }
+          });
+          const mailto = `mailto:?subject=${encodeURIComponent(subject)}&bcc=${encodeURIComponent(OWNER_EMAIL)}&body=${encodeURIComponent(body)}`;
+          window.location.href = mailto;
+        } catch (e) {
+          console.error(e);
+        }
       };
       return (<div className="min-h-screen">
         <header className="sticky top-0 z-50 bg-[#f6c44b]/90 border-b border-black/10">
@@ -173,6 +165,7 @@
                     <p className="mt-2 text-black/70">Listen to the pain without becoming the storm.</p>
                   </div>
                   <div className="flex flex-wrap gap-3">
+                    <button type="button" onClick={(e) => emailFormToSelf(e.currentTarget.closest('form'), 'Couples Exercise Answers')} className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Email answers to yourself</button>
                     <button type="button" onClick={() => window.print()} className="rounded-xl bg-black text-white px-4 py-2 text-sm font-semibold">Print Exercise</button>
                     <a href={AMAZON_URL} target="_blank" rel="noopener noreferrer" className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Buy the Workbook on Amazon</a>
                   </div>
@@ -281,6 +274,7 @@
                   </div>
                   <div className="rounded-xl bg-white/80 border border-black/10 p-3 text-xs text-black/70"><span className="font-semibold">10‑second drill:</span> inhale 4, hold 2, exhale 4 while you say your line twice.</div>
                   <div className="flex flex-wrap gap-3">
+                    <button type="button" onClick={(e) => emailFormToSelf(e.currentTarget.closest('form'), 'My Grounding Statement')} className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Email my answers</button>
                     <button type="button" onClick={() => window.print()} className="rounded-xl bg-black text-white px-4 py-2 text-sm font-semibold shadow">Print Exercise</button>
                     <a href={AMAZON_URL} target="_blank" rel="noopener noreferrer" className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Get the Workbook</a>
                   </div>
@@ -312,6 +306,7 @@
                     <textarea className="mt-1 w-full rounded-xl border border-black/20 bg-white/80 px-3 py-2" rows="2" placeholder="Pause 3 seconds; use my grounding statement; ask for a 10‑minute reset …" />
                   </div>
                   <div className="flex flex-wrap gap-3">
+                    <button type="button" onClick={(e) => emailFormToSelf(e.currentTarget.closest('form'), 'Trigger Timeline Worksheet')} className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Email my answers</button>
                     <button type="button" onClick={() => window.print()} className="rounded-xl bg-black text-white px-4 py-2 text-sm font-semibold shadow">Print Worksheet</button>
                     <a href={AMAZON_URL} target="_blank" rel="noopener noreferrer" className="rounded-xl px-4 py-2 text-sm font-semibold border border-black/20 bg-white/90">Buy the Workbook</a>
                   </div>
